--- a/PG3_2_1.vcxproj
+++ b/PG3_2_1.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Date.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menber.cpp" />
     <ClCompile Include="MenberManager.cpp" />
@@ -154,6 +155,7 @@
     <ClCompile Include="TaskManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Date.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="Menber.h" />
     <ClInclude Include="MenberManager.h" />
